Changelog
=========

1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2015-11-17)
------------------

- Fixes


1.0.1 (2015-11-08)
------------------

- More pythonic access to record items


1.0 (2015-11-07)
----------------

- Initial release