@@ -4,7 +4,8 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix items() method on records
+  [ebrehault]
 
 
 1.0.2 (2015-11-17)
